[package]
name = "typst-blorem"
version = "99.99.99"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2.1"
lipsum = "0.9.1"
rand_chacha = "0.3"
wasm-minimal-protocol = "0.1.0"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 3     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
